package net.proselyte.basepatterns.structural.decorator;

public class DeveloperDecorator {

    Developer developer;

    public DeveloperDecorator(Developer developer) {
        this.developer = developer;
    }


}
