package net.proselyte.basepatterns.structural.decorator;

public class JavaTeamLead {

    public JavaTeamLead(Developer developer) {
    }

    public String sendWeekReport() {
        return "Send week report to customer.";
    }

}
