package net.proselyte.basepatterns.structural.decorator;

public class SeniorJavaDeveloper {

    public SeniorJavaDeveloper(Developer developer) {
    }

    public String makeCodeReview(){
        return " Make code review.";
    }

}
