package net.proselyte.basepatterns.structural.decorator;

public class Task {
    public static void main(String[] args) {

    }
}
