package net.proselyte.basepatterns.structural.facade;

public class Developer {
}
